# shard

./: Cargo.toml  Dockerfile.android  LICENSE  README.md  WHITEPAPER.md  build_android.sh  build_linux.sh  start_nodes.sh  stop_nodes.sh  test_15nodes.sh  test_functional.sh  test_minimal.sh
docs/latex/: arxiv.tex
examples/: agent_chat.js  agent_chat.py  agent_chat.sh  agent_hello.js  agent_hello.py  agent_hello.sh
src/: config.rs  context.rs  crypto.rs  dht.rs  error.rs  events.rs  gui_server.rs  handlers.rs  identity.rs  lib.rs  node.rs  packet.rs  router.rs  router.rs.bak  sharding.rs  storage.rs  tasks.rs  transfer.rs  transport.rs
src/gui/: index.html
tests/: chat_auth.rs  chat_functional.rs  gui_rest.rs
