[package]
name = "shard"
version = "0.97.0"
edition = "2021"

[lib]
name = "shard"
path = "src/lib.rs"

[[bin]]
name = "shard-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "shard-gui"
path = "src/bin/gui.rs"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
reed-solomon-erasure = "6.0"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["pkcs8"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
argon2 = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64-url = "3.0"
filetime = "0.2"
byteorder = "1.4"
rlimit = "0.10"
toml = "0.8"
x509-parser = "0.16"
aes-gcm = "0.10"
rsntp = "4.0"
if-addrs = "0.12"

# QUIC stack
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rcgen = "0.13"

# GUI HTTP/WebSocket server
axum = { version = "0.7", features = ["ws", "multipart"] }
tower-http = { version = "0.5", features = ["cors"] }

# machine-uid reads /etc/machine-id — not present on Android.
# identity.rs uses a persisted UUID fallback when targeting Android.
[target.'cfg(not(target_os = "android"))'.dependencies]
machine-uid = "0.5"

[target.'cfg(all(unix, not(target_os = "android")))'.dependencies]
daemonize = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.24.0"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
http = "1"
